LIU-445: Increase default width and fix build warning.

--- a/docs/_static/css/daliuge.css
+++ b/docs/_static/css/daliuge.css
@@ -19,3 +19,7 @@
     white-space: normal !important; /* Allow text to wrap */
     word-wrap: break-word !important;
 }
+
+.wy-nav-content {
+    max-width: 1000px
+}
