LIU-470: Get ThreadPoolExecution logs into log_storage
- Adding track_current_drop to the run() method resolves the issue of the missing logs.
- I've improved the UI for the logging table
- I have disabled clicking on the logs for Data drops, as they are not currently supported yet.
- I have rectified a previous, erroneous comment that removed track_current_drop from the data_base.

--- a/daliuge-engine/dlg/manager/web/static/css/dm.css
+++ b/daliuge-engine/dlg/manager/web/static/css/dm.css
@@ -143,3 +143,18 @@ tr td.details a:hover{
   transition: 0s visibility;
   visibility: visible;
 }
+
+.table-container {
+    max-width: 75%;
+    overflow-x: auto;
+    margin: 0 auto;
+}
+
+.table {
+    width: 100%;
+    table-layout: auto; /* Let the columns resize based on content */
+}
+
+.table th, .table td {
+    max-width: 700px; /* Limit maximum width of each column */
+}
