LIU-457: Error management system initial work
- Started mapping exceptions to error codes
- Documentation linkage is in its infancy but works.
- Updating existing exceptions to be clearer about the cause.

Signed-off-by: Ryan Bunney <ryanbunney@fastmail.com>

--- a/daliuge-engine/dlg/manager/web/static/css/dm.css
+++ b/daliuge-engine/dlg/manager/web/static/css/dm.css
@@ -156,5 +156,10 @@ tr td.details a:hover{
 }
 
 .table th, .table td {
-    max-width: 700px; /* Limit maximum width of each column */
+    max-width: 800px; /* Limit maximum width of each column */
+}
+
+.wrap-text {
+  white-space: normal !important;
+  word-break: break-word;
 }
